--- a/themes/dashed/source/styles/code.styl
+++ b/themes/dashed/source/styles/code.styl
@@ -141,3 +141,8 @@ td.code ., .hljs-
     
     &marked 
         background-color: mark-color
+
+code
+    font-family: monospace-font
+    font-size: 0.8rem
+    background-color: background
