--- a/themes/dashed/source/styles/list.styl
+++ b/themes/dashed/source/styles/list.styl
@@ -9,7 +9,7 @@
         margin: 0.25rem 0
 
         a
-            color: foreground-color
+            color: very-light-color
             position: relative
             display: block
             text-decoration: none
@@ -23,7 +23,7 @@
                 width: 100%
                 z-index: -1
             span
-                background-color: white
+                background-color: dark-background-color
                 padding-right: 0.5rem
 .posts-list
     li
