--- a/themes/dashed/source/styles/variables.styl
+++ b/themes/dashed/source/styles/variables.styl
@@ -1,11 +1,18 @@
 foreground-color = hsl(0, 0%, 20%)
 slightly-light-color = hsl(0, 0%, 30%)
-light-color = hsl(0, 0%, 50%)
+light-color = hsl(0, 0%, 65%)
+more-light-color = hsl(0, 0%, 80%)
 very-light-color = hsl(0, 0%, 93%)
+
+dark-background-color = hsl(210, 16%, 22%)
 
 mark-color = hsl(50, 80%, 85%)
 link-color = hsl(75, 35%, 25%)
 link-underline-color = hsl(75, 15%, 75%)
+
+dark-mark-color = hsl(48, 15%, 13%)
+dark-link-color = hsl(202, 76%, 68%)
+dark-link-underline-color = hsl(202, 76%, 68%)
 
 serif-font = "PT Serif", "Times New Roman", "Noto Serif", serif
 monospace-font = "Cascadia Code", monospace
