--- a/themes/dashed/source/styles/archive.styl
+++ b/themes/dashed/source/styles/archive.styl
@@ -1,6 +1,6 @@
 @import "variables.styl"
 
 h2
-    color: slightly-light-color
+    color: more-light-color
     font-size: 1.4rem
     margin: 0.75rem 0 0.2rem
